--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,3 @@
-Gem::Specification.new do |spec|
-    # ...
-
-    spec.authors       = ["Alex Peng"]
-    spec.summary       = %[Trafodion output plugin for Embulk]
-    spec.description   = %[Parses output files read by other file input plugins.]
-    spec.email         = ["Alex_peng1986@hotmail.com"]
-    spec.licenses      = ["MIT"]
-    spec.homepage      = "https://github.com/frsyuki/embulk-parser-myformat"
-
-    # ...
-end
 plugins {
     id "com.jfrog.bintray" version "1.1"
     id "com.github.jruby-gradle.base" version "0.1.5"
@@ -87,12 +75,12 @@ task gemspec {
 Gem::Specification.new do |spec|
   spec.name          = "${project.name}"
   spec.version       = "${project.version}"
-  spec.authors       = ["YOUR_NAME"]
+  spec.authors       = ["Alex Peng"]
   spec.summary       = %[Trafodion output plugin for Embulk]
   spec.description   = %[Dumps records to Trafodion.]
-  spec.email         = ["YOUR_NAME"]
+  spec.email         = ["alex_peng1986@hotmail.com"]
   spec.licenses      = ["MIT"]
-  # TODO set this: spec.homepage      = "https://github.com/YOUR_NAME/embulk-output-trafodion"
+  spec.homepage      = "https://github.com/AlexPeng19/embulk-output-trafodion"
 
   spec.files         = `git ls-files`.split("\n") + Dir["classpath/*.jar"]
   spec.test_files    = spec.files.grep(%r"^(test|spec)/")
